# email-exporter

./: .gitignore  README.md  package.json
.github/workflows/: release.yml  test.yml
public/: index.html
src-public/: tsconfig.json
src-public/src/: index.tsx  progress.tsx  success.tsx  ui.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: exporter.rs  main.rs
